# time-series-predictive-maintenance

./: .gitignore  README.md  REPRODUCIBILITY.md  analysis_reproducible.md  pyproject.toml  reproduce.sh  run_project.py
data/: README.md
notebooks/: final_project_analysis.ipynb
outputs/: calibration_summary.csv  dataset_summary.csv  dqn_training_history.csv  feature_importance_top10.csv  policy_summary.csv  q_table.csv  residual_acf.csv  risk_model_metrics.csv  risk_model_metrics_with_ci.csv  robustness_metrics.csv  stationarity_diagnostics.csv  threshold_sweep.csv  tree_tuning_results.csv
presentation/: presentation_script.md  slide_outline.md
report/: final_report.md  final_report.tex
src/pdm_project/: __init__.py  cli.py  data.py  features.py  modeling.py  pipeline.py  policy.py  simulator.py
