[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-series-driven-predictive-maintenance-with-reinforcement-learning"
version = "0.1.0"
description = "Course project on predictive maintenance using time-series failure-risk modeling and simple policy comparison."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "statsmodels",
    "scikit-learn",
]

[project.scripts]
pdm-project = "pdm_project.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
